<resources>
    <string name="app_name">Register and Login</string>
    <string name="log_in">Log In</string>
    <string name="typehere">type here...</string>
    <string name="password">Password:</string>
    <string name="username">UserName:</string>
    <string name="register">Register</string>
    <string name="d_o_b">D.O.B</string>
    <string name="email">Email:</string>
    <string name="first_name">First Name:</string>
    <string name="family_name">Family Name:</string>
    <string name="home">Home</string>
    <string name="login">login</string>
</resources>