<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="167dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="104dp"
        android:text="@string/home"
        android:textAlignment="center" />

    <Button
        android:id="@+id/login"
        android:layout_width="121dp"
        android:layout_height="65dp"
        android:layout_above="@+id/register"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="144dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="36dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/register"
        android:layout_width="135dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="136dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="49dp"
        android:text="@string/register" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="88dp"
        app:srcCompat="@drawable/pepsilogo" />

</RelativeLayout>