<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="243dp"
        android:text="@string/username" />

    <TextView
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="164dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="164dp"
        android:text="Login"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/edittext1"
        android:layout_width="278dp"
        android:layout_height="63dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="88dp"
        android:autofillHints=""
        android:hint="@string/typehere"
        android:inputType="textWebEmailAddress"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:textColorHint="#546E7A"/>

    <EditText
        android:id="@+id/edittext2"
        android:layout_width="278dp"
        android:layout_height="63dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="88dp"
        android:autofillHints=""
        android:hint="@string/typehere"
        android:inputType="textPassword"
        android:textColorHint="#546E7A" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_below="@+id/edittext1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="243dp"
        android:text="@string/password" />

    <Button
        android:id="@+id/button"
        android:layout_width="117dp"
        android:layout_height="73dp"
        android:layout_below="@+id/edittext2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="146dp"
        android:layout_marginTop="134dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="89dp"
        android:text="@string/log_in" />



</RelativeLayout>